<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_nav_home"
        android:title="@string/nav_menu" />
    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_nav_cart_selector"
        android:title="@string/nav_cart" />
    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/ic_nav_orders"
        android:title="@string/nav_orders" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_nav_alerts"
        android:title="@string/nav_alerts" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_nav_profile"
        android:title="@string/nav_profile" />
</menu>
